# django-starterkit

./: .gitignore  .pep8  Dockerfile  Makefile  README.md  bandit.ini  celerybeat-schedule  manage.py  package-lock.json  package.json  pylintrc  pyproject.toml  pytest.ini  rename.py  requirements.txt
django_channels_notifications/: admin.py  apps.py  models.py  notifications_consumers.py  views.py
django_channels_notifications/migrations/: 0001_initial.py  0002_userchannels.py
django_channels_notifications/templates/django_channels_notifications/: index.html  notifications_drawer.html
django_channels_notifications/templatetags/: django_channels_notifications.py
django_starterkit/: asgi.py  auth_backends.py  celery.py  common.py  qa.py  settings.py  urls.py  wsgi.py
docker/: docker-compose.override.dev.yml  docker-compose.services.yml  docker-compose.yml  entry
docker-build/: docker-compose.yml
main/: admin.py  models.py  routing.py  urls.py  views.py
main/static/css/: common.scss
main/templates/account/: activate.html  activation_complete.html  form_errors.html  login.html  logout.html  password_change.html  password_change_done.html  password_change_form.html  password_reset.html  password_reset_complete.html  password_reset_confirm.html  password_reset_done.html  password_reset_form.html  password_reset_from_key.html  password_reset_from_key_done.html  registration_base.html  signup.html  (+1 more)
project/: __init__.py  celery.py  settings.py  urls.py  wsgi.py
requirements/: common.txt  deploy.txt  jenkins.txt
settings/: jenkins.py  settings.py
(+19 files in other folders)
